test_regress/t/t_bitsel_const_bad.out
%Error: t/t_bitsel_const_bad.v:20: Illegal bit or array select; type does not have a bit range, or bad dimension: type is logic
%Error: Exiting due to
